--- a/index.html
+++ b/index.html
@@ -42,6 +42,32 @@
     </style>
 </head>
 <body>
+    <!-- BACK TO PORTAL BUTTON -->
+<button class="back-btn" onclick="goToPortal()">⬅ Back</button>
+
+<style>
+  .back-btn {
+    position: fixed;
+    top: 15px;
+    left: 15px;
+    padding: 10px 18px;
+    border: none;
+    border-radius: 25px;
+    background: linear-gradient(135deg, #ff6a88, #ff99ac);
+    color: white;
+    font-size: 14px;
+    font-weight: bold;
+    cursor: pointer;
+    box-shadow: 0 8px 20px rgba(0,0,0,0.3);
+    z-index: 9999;
+  }
+</style>
+
+<script>
+  function goToPortal() {
+    window.location.href = "https://koushikgdk-tech.github.io/portal/";
+  }
+</script>
 
 <h2>Weekly Timetable</h2>
 
@@ -108,4 +134,5 @@
 </table>
 
 </body>
+
 </html>
