--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
 </style>
 
 <script>
-  function goToPortal() {
-    window.location.href = "https://koushikgdk-tech.github.io/portal/";
-  }
+ function goToPortal() {
+    window.location.href = "../projects.html";
+}
 </script>
 
 <h2>Weekly Timetable</h2>
@@ -136,3 +136,4 @@
 </body>
 
 </html>
+
